--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@
     border-radius: 8px;
     background: rgb(250, 250, 250);
     width: 468px;
-    padding: 40px 40px 78px 40px;
+    padding: 40px 50px 78px 40px;
     position: relative;
 }
 .main__services_cart-item7{
@@ -456,12 +456,18 @@
     display: block;
 }
 .footer {
+    min-width: 1488px;
     height: 286px;
     margin-top: 160px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     background: rgb(47, 47, 47); /* как растенуть на весь экран? можно вынести футер за пределы контейнера врапер и внутри футера сделать отдельный контейнер футер__врапер*/
     padding: 60px 0 65px;
+}
+.footer__wrapper{
+    width: 1448px;
+    display: flex;
+    justify-content: space-between;
 }
 .footer__logo {
     display: flex;
@@ -482,6 +488,7 @@
     line-height: 120%;
     letter-spacing: 0%;
     text-align: left;
+    opacity: 0.6;
 }
 .footer__coteiner_links {
     display: flex;
@@ -543,3 +550,6 @@
     color: rgb(47, 47, 47);
     width: 87px;
 } */
+.dash{
+    letter-spacing: 0;
+}
