--- a/fonts/font/stylesheet.css
+++ b/fonts/font/stylesheet.css
@@ -18,7 +18,7 @@
         url('TTFirsNeue-Regular.woff2') format('woff2'),
         url('TTFirsNeue-Regular.woff') format('woff'),
         url('TTFirsNeue-Regular.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -30,7 +30,7 @@
         url('TTFirsNeue-BoldItalic.woff2') format('woff2'),
         url('TTFirsNeue-BoldItalic.woff') format('woff'),
         url('TTFirsNeue-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
+    font-weight: 700;
     font-style: italic;
 }
 
